fix: remove body background color and wrap App component in a div with new background class

--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,6 @@
  
 }
 
-body{
-  background-color: #0d0f17;
-}
-
-
 .logo {
   height: 6em;
   padding: 1.5em;
